# project-crusade

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: bot.py  settings.py
src/commands/: Creation.py  Delete.py  Retrieval.py  Update.py
src/commands/background_tasks/: Movements.py  Reinforcements.py
src/commands/creation_sub_commands/: ArmyCommands.py  FleetCommands.py
src/controllers/: AdminController.py  ArmyController.py  ClaimController.py  DomesticController.py  FleetController.py  GarrisonController.py  HoldingController.py  MiscController.py  MovementController.py
src/controllers/background/: MovementBackgroundController.py
src/resources/: movement_times.json
src/services/: AdminService.py  ArmyService.py  ClaimService.py  DomesticService.py  FleetService.py  GarrisonService.py  HoldingService.py  MiscService.py  MovementService.py
src/sheets/: Armies.csv  Claims.csv  Domestics.csv  Fleets.csv  Garrisons.csv  Holdings.csv  Map.csv  Movements.csv  References.csv  Wars.csv
src/utilities/: army_utilities.py  authorisation_utilities.py  collection_utilities.py  embed_utilities.py  google_sheets_utilities.py  local_sheets_utilities.py  movement_utilities.py  pathfinding_utilities.py  sheets_utilities.py
src/utils/: ArmyUtils.py  MovementUtils.py
src/utils/misc/: AuthorisationUtils.py  CollectionUtils.py  EmbedUtils.py
src/utils/pathfinding/: PathfindingUtils.py
src/utils/sheets/: GoogleSheetUtils.py  LocalSheetUtils.py
