[tool.poetry]
name = "project-crusade"
version = "0.1.0"
description = "A discord bot to CRUD information from a spreadsheet for a map based multi-player game."
authors = ["Athenian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
gspread = "^6.1.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
